WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286995
hotels.com: clicking on "Shop Travel" causes the drop down UI to flicker
https://bugs.webkit.org/show_bug.cgi?id=286995
Summary
hotels.com: clicking on "Shop Travel" causes the drop down UI to flicker
Antoine Quint
Reported
2025-02-03 22:06:46 PST
When clicking on the "Shop Travel" drop down at the top left of hotels.com, the UI that displays flickers before fully rendering.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2025-02-03 22:12:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39970
Antoine Quint
Comment 2
2025-02-03 22:14:09 PST
rdar://126631968
EWS
Comment 3
2025-02-04 04:04:15 PST
Committed
289777@main
(40952a420c5e): <
https://commits.webkit.org/289777@main
> Reviewed commits have been landed. Closing PR #39970 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug